# prototype

./: Compiler.hs  README.md  codegen.py  data.json  prototype.cabal  stack.yaml  user.prototype
.stack-work/install/x86_64-osx/nightly-2015-11-06/7.10.2/flag-cache/: aeson-0.9.0.1-dfddde258ee207a5d683276ea2431742  attoparsec-0.13.0.1-3edc668a3df79a7e611a0a9afcc3a8e9  dlist-0.7.1.2-31419d498459d3448eddd9aba0883e21  hashable-1.2.3.3-09c4177c49dd46a63f7036317bb17114  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  parsec-3.1.9-bddea73c8bf2d5ff1335dae2cc92e789  primitive-0.6.1.0-842c44bae4dcc3c70cd2af42599ab93d  prototype-0.1.0.0  scientific-0.3.4.2-84712b588a5d29380e895045e1981923  syb-0.5.1-09089498a055bd723b4a95c1351d3c8a  text-1.2.1.3-2395ef415c1b20175aae83b50060e389  unordered-containers-0.2.5.1-09ed02f61ed89449c8cd4b51d7f295c2  vector-0.11.0.0-b64bef75a36f6280e109f6ff2bea1520
examples/: card.prototype  enum.prototype  user.prototype
src/: Main.hs
src/Language/: AST.hs  Compiler.hs  Parser.hs
test/Language/: ParserSpec.hs
