name:                prototype
version:             0.1.0.0
homepage:            https://forward.io
license:             AllRightsReserved
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable prototype
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       parsec,
                       aeson,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: src, test
  main-is: Spec.hs
  default-language:    Haskell2010
  build-depends: base >= 4.8
               , hspec
               , parsec
               , aeson
               , bytestring
